<resources>
    <string name="app_name">Lazyv</string>
    <string name="title_activity_main">LazyV</string>
    <string name="title_home">Presentation</string>
    <string name="title_mouse">Mouse</string>
    <string name="title_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post_url">10.1.1.36</string>
    <string name="default_ip">10.1.1.36</string>
    <string name="default_port">8777</string>
    <string name="default_passcode">vovas123</string>
    <string name="ip_view">IP Address:</string>
    <string name="port_view">Port:</string>
    <string name="passcode_view">Passcode:</string>
    <string name="connect_button">Connect</string>

    <string name="server_pref">SERVER_PREF</string>
    <string name="ip_address">ipAddress</string>
    <string name="passcode">passcode</string>
    <string name="port">port</string>

</resources>
