<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".fragments.SettingsFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--<TextView-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:text="Settings" />-->
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/ip_view"
                android:layout_width="99dp"
                android:layout_height="27dp"
                android:id="@+id/ipAdressView" android:layout_marginTop="92dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"/>

        <TextView
                android:text="@string/port_view"
                android:layout_width="99dp"
                android:layout_height="27dp"
                android:id="@+id/portView"
                android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@+id/ipAdress" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"/>
        <TextView
                android:text="@string/passcode_view"
                android:layout_width="99dp"
                android:layout_height="27dp"
                android:id="@+id/passcodeView"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp" android:layout_marginTop="56dp"
                app:layout_constraintTop_toBottomOf="@+id/port"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/default_ip"
                android:ems="10"
                android:id="@+id/ipAdress" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"
                app:layout_constraintTop_toBottomOf="@+id/ipAdressView"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:text="@string/default_port"
                android:ems="10"
                android:id="@+id/port" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="96dp"
                app:layout_constraintTop_toBottomOf="@+id/portView"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:text="@string/default_passcode"
                android:ems="10"
                android:id="@+id/passcode"
                android:layout_marginStart="96dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passcodeView"/>
        <Button
                android:text="@string/connect_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/connectButton" android:layout_marginTop="72dp"
                app:layout_constraintTop_toBottomOf="@+id/passcode" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="220dp"/>


    </android.support.constraint.ConstraintLayout>

</FrameLayout>